2006-06-29  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* value.c: 
	Additional fix for 1439399. The value2chars function was not embedding
	the datetime string in quotes, which lead to a failure in the CIMXML
	generation.

2006-06-26  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* brokerUpc.c: 
	Fixed 1511261: sfcb doesn't pass credentials in up-calls.
	Now copying the CMPIPrincipal to the BINREQ structure for upcalls.

2006-06-21  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* cimXmlGen.c, objectpath.c, objectImpl.c: 
	Fixed 1439399: sfcb doesn't support datetime for keys.

2006-05-24  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-45.boeblingen.de.ibm.com>

	* classProvider.c, classProviderGz.c: 
	Fixed 1201656: Missing associations in sblim-cmpi-base.
	The class provider's getassoc method was incorrectly returning 
	non-association classes. This is fixed now.

2006-05-03  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-45.boeblingen.de.ibm.com>

	* providerDrv.c:
	Fixed 1481081: corrected invocation of addEntry calls for principal.

	* httpAdapter.c:
	Made the debug loop conditional on a variable "breakloop".

2006-03-01  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-45.boeblingen.de.ibm.com>

	* sfcbunstage.sh.in: 
	Postfix 1404047: add -n to list of getopt options.

2006-02-28  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-45.boeblingen.de.ibm.com>

	* cimXmlRequest.c, httpAdapter.c: 
	Fixed 1440183: Fixed errors in chunked response generation.

	* trace.h: 
	Fixed 1440179: Corrected definition of SFCB_TRACE_START macro.

2006-01-31    <mihajlov@dyn-9-152-143-45.boeblingen.de.ibm.com>

	* cmpidt.h, cmpift.h:
	Fixed 1420604: CMPI header files were not CMPI 1.0 compliant.

	* getSchema.sh.pre.in: 
	Fixed 1420399: getSchema.sh can be customized to deal with
	different CIM Schema versions now. Default is still 2.9.0.

2006-01-30  a3schuur
